# Radim

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
RadimTheSearchEngine/: CMakeLists.txt  Dockerfile
RadimTheSearchEngine/src/: RadimTheSearchEngine.cpp  RadimTheSearchEngine.h
RadimTheWebCrawler/: CMakeLists.txt
RadimTheWebCrawler/src/: RadimTheWebCrawler.cpp  RadimTheWebCrawler.h  WebCrawlerManager.cpp  WebCrawlerManager.h
include/: RadimTheWebCrawler.h
src/: RadimTheWebCrawler.cpp  RadimTheWebCrawler.h
